Improved swagger documentation
